--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,15 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.473.0",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
